--- a/main.html
+++ b/main.html
@@ -12,18 +12,18 @@
             color: var(--skin-color);
         }
     </style>
-<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href=".../css/main.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="stylesheet" href="css/skins/color_main.css">
+<link rel="stylesheet" href=".../css/skins/color_main.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-<link rel="stylesheet" href="css/skins/color-1.css" class="alternate-style" title="color-1" disabled>
-<link rel="stylesheet" href="css/skins/color-2.css" class="alternate-style" title="color-2" disabled>
-<link rel="stylesheet" href="css/skins/color-3.css" class="alternate-style" title="color-3" disabled>
-<link rel="stylesheet" href="css/skins/color-4.css" class="alternate-style" title="color-4" disabled>
-<link rel="stylesheet" href="css/skins/color-5.css" class="alternate-style" title="color-5" disabled>
-<link rel="stylesheet" href="css/style-switcher.css">
+<link rel="stylesheet" href=".../css/skins/color-1.css" class="alternate-style" title="color-1" disabled>
+<link rel="stylesheet" href=".../css/skins/color-2.css" class="alternate-style" title="color-2" disabled>
+<link rel="stylesheet" href=".../css/skins/color-3.css" class="alternate-style" title="color-3" disabled>
+<link rel="stylesheet" href=".../css/skins/color-4.css" class="alternate-style" title="color-4" disabled>
+<link rel="stylesheet" href=".../css/skins/color-5.css" class="alternate-style" title="color-5" disabled>
+<link rel="stylesheet" href=".../css/style-switcher.css">
 </head>
 <body>
     <canvas>
