--- a/index.html
+++ b/index.html
@@ -382,28 +382,28 @@
                         <div class="activities-item padd-15">
                             <div class="activities-item-inner shadow-dark">
                                 <div class="activities-img">
-                                    <img src="images/codmos1.jpg" alt="">
+                                    <img src="../images/codmos1.jpg" alt="">
                                 </div>
                             </div>
                         </div>
                         <div class="activities-item padd-15">
                             <div class="activities-item-inner shadow-dark">
                                 <div class="activities-img">
-                                    <img src="images/codmos2.jpg" alt="">
+                                    <img src="../images/codmos2.jpg" alt="">
                                 </div>
                             </div>
                         </div>
                         <div class="activities-item padd-15">
                             <div class="activities-item-inner shadow-dark">
                                 <div class="activities-img">
-                                    <img src="images/codmos3.jpg" alt="">
+                                    <img src="../images/codmos3.jpg" alt="">
                                 </div>
                             </div>
                         </div>
                         <div class="activities-item padd-15">
                             <div class="activities-item-inner shadow-dark">
                                 <div class="activities-img">
-                                    <img src="images/greenevolution1.jpg" alt="">
+                                    <img src="../images/greenevolution1.jpg" alt="">
                                 </div>
                             </div>
                         </div>
