--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <link rel="stylesheet" href="../css/skins/color-4.css" class="alternate-style" title="color-4" disabled>
 <link rel="stylesheet" href="../css/skins/color-5.css" class="alternate-style" title="color-5" disabled>
 <link rel="stylesheet" href="../css/style-switcher.css">
+<link rel="icon" type="image/x-icon" href="../images/favicon.ico">
 </head>
 <body>
     <canvas>
