--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 <link rel="stylesheet" href="../css/skins/color-4.css" class="alternate-style" title="color-4" disabled>
 <link rel="stylesheet" href="../css/skins/color-5.css" class="alternate-style" title="color-5" disabled>
 <link rel="stylesheet" href="../css/style-switcher.css">
-<link rel="icon" type="image/x-icon" href="../images/favicon.ico">
-<link rel="apple-touch-icon" sizes="57x57" href="../images/apple-icon-57x57.png">
+<link rel="icon" type="image/x-icon" href="images/favicon.ico">
+<link rel="apple-touch-icon" sizes="57x57" href="images/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="../images/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="../images/apple-icon-72x72.png">
 <link rel="apple-touch-icon" sizes="76x76" href="../images/apple-icon-76x76.png">
