--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 <link rel="stylesheet" href="../css/skins/color-4.css" class="alternate-style" title="color-4" disabled>
 <link rel="stylesheet" href="../css/skins/color-5.css" class="alternate-style" title="color-5" disabled>
 <link rel="stylesheet" href="../css/style-switcher.css">
-<link rel="icon" type="image/x-icon" href="images/favicon.ico">
-<link rel="apple-touch-icon" sizes="57x57" href="images/apple-icon-57x57.png">
+<link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+<link rel="apple-touch-icon" sizes="57x57" href="../images/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="../images/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="../images/apple-icon-72x72.png">
 <link rel="apple-touch-icon" sizes="76x76" href="../images/apple-icon-76x76.png">
@@ -38,7 +38,7 @@
 <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="96x96" href="../images/favicon-96x96.png">
 <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon-16x16.png">
-<link rel="manifest" href="/manifest.json">
+<link rel="manifest" href="../images/manifest.json">
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
