--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="../images/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
+<meta property="og:image" content="../images/ava.jpg" />
+<meta property="og:image:type" content="image/jpeg" />  
+<meta property="og:image:width" content="1280" />
+<meta property="og:image:height" content="720" />
+<meta property="og:title" content="Anh Yêu Em" />
+<meta property="og:description" content="Portfolio of Tuan Huynh" />
 </head>
 <body>
     <canvas>
