--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Con gà Maiien </title>
+    <title> Portfolio </title>
     <style type="text/css">
         a:visited {
             color: var(--skin-color);
