--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <meta property="og:image:type" content="image/jpeg" />  
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="627" />
-<meta property="og:title" content="Anh Yêu Em" />
+<meta property="og:title" content="Portfolio" />
 <meta property="og:description" content="Portfolio of Tuan Huynh" />
 </head>
 <body>
