--- a/index.html
+++ b/index.html
@@ -474,41 +474,56 @@
                     <h3 class="contact-title padd-15">SEND ME AN EMAIL</h3>
                     <h4 class="contact-sub-title padd-15">I'M VERY RESPONSIVE TO MESSAGES</h4>
                     <!--Contact Form-->
-                    <div class="row">
-                        <div class="contact-form padd-15">
-                            <div class="row">
-                                <div class="form-item col-6 padd-15">
-                                    <div class="form-group"> 
-                                        <input type="text" style="font-family: Pixelify Sans;" class="form-control" placeholder="Name">
+                    <form method="POST" id="form">
+                        <input type="hidden" name="access_key" value="81580741-dd08-4e4c-a93c-a38a4e65bd44">
+                        <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
+                        <input type="hidden" name="from_name" value="Portfolio">
+                        <input type="hidden" name="replyto" value="tuanafk2006@gmail.com">
+                        <div class="row">
+                            <div class="contact-form padd-15">
+                                <div class="row">
+                                    <div class="form-item col-6 padd-15">
+                                        <div class="form-group"> 
+                                            <input type="text" name="name" style="font-family: Pixelify Sans;" class="form-control" placeholder="Name" required>
+                                        </div>
+                                    </div>
+                                    <div class="form-item col-6 padd-15">
+                                        <div class="form-group">
+                                            <input type="email" name="email"  style="font-family: Pixelify Sans;" class="form-control" placeholder="Email" required>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="form-item col-6 padd-15">
-                                    <div class="form-group">
-                                        <input type="email"  style="font-family: Pixelify Sans;" class="form-control" placeholder="Email">
+                                <div class="row">
+                                    <div class="form-item col-12 padd-15">
+                                        <div class="form-group">
+                                            <input type="text" name="subject"  style="font-family: Pixelify Sans;" class="form-control" placeholder="Subject" required>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="row">
-                                <div class="form-item col-12 padd-15">
-                                    <div class="form-group">
-                                        <input type="text"  style="font-family: Pixelify Sans;" class="form-control" placeholder="Subject">
+                                <div class="row">
+                                    <div class="form-item col-12 padd-15">
+                                        <div class="form-group">
+                                            <textarea name="" name="message"  style="font-family: Pixelify Sans;" class="form-control" id="" placeholder="Message" required></textarea>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="row">
-                                <div class="form-item col-12 padd-15">
-                                    <div class="form-group">
-                                        <textarea name=""  style="font-family: Pixelify Sans;" class="form-control" id="" placeholder="Message"></textarea>
+                                <div class="row">
+                                    <div class="form-item col-9 padd-15">
+                                        <button type="submit"  style="font-family: Pixelify Sans;" class="btn">Send Message</button>
                                     </div>
+                                    <!--
+                                    <div class="form-item col-9 padd-15">
+                                        <div class="up">
+                                            <label for="attachment">Upload file</label>
+                                            <input type="file" name="attachment" id="attachment"/>
+                                        </div>
+                                    </div>
+                                    -->
                                 </div>
-                            </div>
-                            <div class="row">
-                                <div class="form-item col-12 padd-15">
-                                    <button type="submit"  style="font-family: Pixelify Sans;" class="btn">Send Message</button>
-                                </div>
+                                <div id="result"></div>
                             </div>
                         </div>
-                    </div>
+                    </form>
                 </div>
             </section>
             <!--Contact Section End-->
@@ -538,5 +553,12 @@
     <script src="js/about.js"></script>
     <script src="js/active.js"></script>
     <script src="js/matrix.js"></script>
+    <script>
+        window.onload = function() {
+            // Reset the form fields when the page loads
+            document.getElementById("form").reset();
+        };
+    </script>
+    <script src="js/success.js"></script>
 </body>
 </html>
