--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
                                 <div class="row">
                                     <div class="form-item col-12 padd-15">
                                         <div class="form-group">
-                                            <textarea name="" name="message"  style="font-family: Pixelify Sans;" class="form-control" id="" placeholder="Message" required></textarea>
+                                            <textarea name="message"  style="font-family: Pixelify Sans;" class="form-control" id="" placeholder="Message" required></textarea>
                                         </div>
                                     </div>
                                 </div>
