--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                             <p>Age : <span>18</span></p>
                                         </div>
                                         <div class="info-item padd-15">
-                                            <p>Website : <span>www.domain.com</span></p>
+                                            <p>Website : <span>https://tuanhuynhportfolio.netlify.app/</span></p>
                                         </div>
                                         <div class="info-item padd-15">
                                             <p>Email : <span>tuanafk2006@gmail.com</span></p>
