--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="buttons padd-15">
-                                            <a href="Resume.docx" download="Resume" class="btn">Download resume</a> 
+                                            <a href="Resume.pdf" download="Resume" class="btn">Download resume</a> 
                                         </div>
                                     </div>
                                 </div>
